syntax = "proto3";
package recognizer;

service Recognizer {
  rpc Recognize(RecognizeRequest) returns (RecognizeResponse);
}

message RecognizeRequest {
  string text = 1;
}

message RecognizeResponse {
  repeated Recognitions results = 1;
}

message Recognitions {
  string recognized_text_chunk = 1;
  string recognized_entity = 2;
}